# rustic-witcher

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.rustic-mongo-buddy  LICENSE  Makefile  README.md  deny.toml  docker-compose.yaml  renovate.json  rust-toolchain.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yaml  format-workflow.yaml  scorecards.yml  tests-workflow.yaml
docs/: ANONYMIZATION_CONFIG.md  CONFIG_GENERATOR_CLI.md  DOCKER_BUILD.md  ENVIRONMENT_VARIABLES.md  INITIAL_CONFIG.md  LOCAL_EXECUTION.md  SOURCE_CODE_TESTS.md  VALIDATIONS_CONFIG.md
rustic-anonymization-config/: Cargo.toml
rustic-anonymization-config/src/: anonymization_config_impl.rs  anonymization_config_table_impl.rs  lib.rs
rustic-anonymization-config/src/config_structs/: anonymization_config.rs  column_transformation_struct.rs  filter_type_struct.rs  mod.rs  table_struct.rs  table_type_struct.rs  transformation_type_struct.rs
rustic-anonymization-config/src/tests/: mod.rs
rustic-anonymization-operator/: Cargo.toml
rustic-anonymization-operator/src/: anonymization_dataframe_operator.rs  lib.rs
rustic-base-transformations/: Cargo.toml
rustic-base-transformations/src/: lib.rs  noop_transformator.rs  nulify_transformator.rs  replace_transformator.rs
rustic-cdc-operator/: Cargo.toml
rustic-cdc-operator/src/: cdc_operator.rs  lib.rs
rustic-config-generator-cli/: Cargo.toml  rustic-config-generator-cli
rustic-config-generator-cli/src/: main.rs
rustic-duration/: Cargo.toml
rustic-duration/src/: lib.rs
rustic-faker-transformations/: Cargo.toml
rustic-faker-transformations/src/: lib.rs
rustic-faker-transformations/src/faker_transformators/: fake_email_with_id_prefix_transformator.rs  fake_multi_email_transformator.rs  fake_phone_transformator.rs  mod.rs
rustic-faker-transformations/src/faker_transformators/tests/: fake_address_transformator.rs  fake_companyname_transformator.rs  fake_email_transformator.rs  fake_firstname_transformator.rs  fake_lastname_transformator.rs  fake_md5_transformator.rs  fake_multi_email_transformator.rs  fake_name_transformator.rs  fake_phone_transformator.rs  mod.rs
rustic-faker-types/: Cargo.toml
rustic-faker-types/src/: lib.rs
rustic-mongo-buddy/: Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
rustic-mongo-buddy/scripts/: export-data-docker-entrypoint.sh  import-data-docker-entrypoint.sh
rustic-mongo-buddy/src/: main.rs  mongo_data_exporter.rs  mongo_data_importer.rs
rustic-result-validator/: Cargo.toml
rustic-result-validator/src/: lib.rs
rustic-result-validator/src/config_loader/: loader.rs
rustic-result-validator/src/config_structs/: mod.rs  root_struct.rs  validation_struct.rs  value_check_type_struct.rs
rustic-result-validator/src/validator/: mod.rs  result_validator.rs
rustic-s3-config/: Cargo.toml
rustic-s3-config/src/: lib.rs
rustic-shell/: Cargo.toml
rustic-shell/src/: lib.rs  shell_command_executor.rs
rustic-target-db/: Cargo.toml
rustic-target-db/src/: lib.rs  target_db_finalizer.rs  target_db_preparator.rs
rustic-transformator/: Cargo.toml
rustic-transformator/src/: lib.rs  transformator.rs  transformator_output.rs  transformator_type.rs
rustic-whole-table-transformator/: Cargo.toml
rustic-whole-table-transformator/src/: lib.rs  whole_table_transformator.rs
scripts/: docker-entrypoint.sh  docker-push.sh
src/: execution_payload.rs  main.rs
