[package]
name = "rustic-anonymization-operator"
version = "0.1.0"
edition = "2021"

[dependencies]
polars.workspace = true
tracing.workspace = true
dms-cdc-operator.workspace = true
aws-sdk-s3.workspace = true
async-trait.workspace = true
anyhow.workspace = true
rand.workspace = true
rustic-duration.workspace = true
rustic-transformator.workspace = true
rustic-anonymization-config.workspace = true
rustic-whole-table-transformator.workspace = true
rustic-bg-whole-table-transformator = { workspace = true, optional = true }

[features]
default = []
bg_source = ["dep:rustic-bg-whole-table-transformator"]
open_source = []
