[package]
name = "rustic-config-generator-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
cliclack.workspace = true
ctrlc.workspace = true
console.workspace = true
strum.workspace = true
anyhow.workspace = true
toml.workspace = true
rustic-anonymization-config.workspace = true
rustic-faker-types.workspace = true

[[bin]]
edition = "2021"
name = "rustic-config-generator-cli"
path = "src/main.rs"
