[package]
name = "rustic-config-generator-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
cliclack.workspace = true
ctrlc.workspace = true
console.workspace = true
strum.workspace = true
anyhow.workspace = true
toml.workspace = true
rustic-anonymization-config.workspace = true
rustic-faker-types.workspace = true

[[bin]]
name = "rustic-config-generator-cli"
path = "src/main.rs"
