[package]
name = "rustic-faker-transformations"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
polars.workspace = true
rand.workspace = true
fake.workspace = true
bon.workspace = true
rustic-transformator.workspace = true
rustic-faker-types.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
