[package]
name = "rustic-target-db"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
tokio.workspace = true
tracing.workspace = true
colored.workspace = true
deadpool-postgres.workspace = true
dms-cdc-operator.workspace = true
rustic-shell.workspace = true
anyhow.workspace = true
bon.workspace = true
