[package]
name = "rustic-transformator"
version = "0.1.0"
edition = "2021"

[dependencies]
polars.workspace = true
tracing.workspace = true
fake.workspace = true
rand.workspace = true
rand_seeder.workspace = true
bon.workspace = true
rustic-faker-types.workspace = true
rustic-duration.workspace = true
